--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -17,6 +17,9 @@ pipeline {
         NEXUS_LOGIN = 'nexuslogin'
         SONARSERVER = 'sonarserver'
         SONARSCANNER = 'sonarscanner'
+        registryCredential = 'ecr:us-east-2:awscreds'
+        appRegistry = '038747532455.dkr.ecr.us-east-2.amazonaws.com/vprofileappimg'
+        vprofileRegistry = "https://038747532455.dkr.ecr.us-east-2.amazonaws.com"
     }
 
     stages {
@@ -62,5 +65,28 @@ pipeline {
               }
             }
         }
+
+
+
+        stage('Build App Image') {
+            steps {
+                script {
+                    dockerImage = docker.build( appRegistry + ":$BUILD_NUMBER", "./Docker-files/app/multistage/")
+                }
+            }
+        }
+        
+        stage('Upload App Image') {
+          steps{
+            script {
+              docker.withRegistry( vprofileRegistry, registryCredential ) {
+                dockerImage.push("$BUILD_NUMBER")
+                dockerImage.push('latest')
+              }
+            }
+          }
+        }
+
+
     }
 }
