--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,15 @@
 		    <artifactId>gson</artifactId>
 		    <version>2.8.2</version>
 		</dependency>
+
+
+        <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-to-slf4j</artifactId>
+        <version>2.8.2</version>
+        </dependency>
+
+
     </dependencies>
      <build>
         <plugins>
@@ -213,5 +222,9 @@
       <id>${NEXUS-GRP-REPO}</id>
       <url>http://${NEXUSIP}:${NEXUSPORT}/repository/${NEXUS_GRP_REPO}/</url>
     </repository>
+    
+
+
+
   </repositories>
 </project>
